--- a/main.html
+++ b/main.html
@@ -184,7 +184,7 @@
 </tbody>
 <tfoot>
 	<tr>
-		<td nowrap>Веса целей</td>
+		<td nowrap>Веса jhkjhkjhkjhkjhkjhkjhцелей</td>
 		<td class="green" id = "Z22">0</td>
 		<td class="green" id = "Z33">0</td>
 		<td class="green" id = "Z44">0</td>
