--- a/main.html
+++ b/main.html
@@ -161,7 +161,7 @@
 		<li>Открытие собственного производства;</li>
 		<li>Увеличение затрат на рекламу;</li>
 		<li>Расширение рынка сбыта;</li>
-		<li>Снижение цен с целью увеличения оборота.</li>
+		<li>Снижение цен's;ldf';lичения оборота.</li>
 	</ol>
 <table class="features-table">
 <thead>
