--- a/main.html
+++ b/main.html
@@ -176,7 +176,7 @@
 <tbody>
 	<tr>
 		<td nowrap>Pj</td>
-		<td class="green"><input id="Z2" type="text" value ="100"></td>
+		<td class="green"><input id="Z2" type="text" value ="11212121200"></td>
 		<td class="green"><input id="Z3" type="text" value ="72"></td>
 		<td class="green"><input id="Z4" type="text" value ="41"></td>
 		<td class="green"><input id="Z1" type="text" value ="31"></td>
